implemented a working ruleset manager

--- a/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
+++ b/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
@@ -10,6 +10,7 @@
     <EmbeddedResource Include="Resources\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Resources\RulesetUpdater.exe" />
     <None Remove="Resources\Textures\cover.jpg" />
   </ItemGroup>
   <ItemGroup>
