--- a/LocalizationGenerator/Source/en.jsonc
+++ b/LocalizationGenerator/Source/en.jsonc
@@ -1,5 +1,5 @@
 {
-    "locale": "en-US",
+    "locale": "en",
 
     "local-ruleset-description": "Local ruleset, not listed on the wiki.",
     // {0} = link to the wiki page
