--- a/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
+++ b/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <None Remove="Resources\RulesetUpdater.exe" />
     <None Remove="Resources\Textures\cover.jpg" />
+    <None Remove="Resources\Textures\default_pfp.png" />
+    <None Remove="Resources\Textures\default_wiki_cover.jpg" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ppy.osu.Game" Version="2022.128.0" />
