--- a/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
+++ b/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
@@ -14,6 +14,7 @@
     <None Remove="Resources\Textures\cover.jpg" />
     <None Remove="Resources\Textures\default_pfp.png" />
     <None Remove="Resources\Textures\default_wiki_cover.jpg" />
+    <None Remove="Resources\Textures\oh_no.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ppy.osu.Game" Version="2022.128.0" />
