--- a/LocalizationGenerator/Source/ru.jsonc
+++ b/LocalizationGenerator/Source/ru.jsonc
@@ -9,43 +9,54 @@
     "listing-tab": "список",
     "rurusetto-description": "открыть список доступных режимов",
     "user-unknown": "Аноним",
-    "tag-archived": "В архиве",
+    "tag-archived": "В АРХИВЕ",
     "tag-archived-tooltip": "Этот режим больше не поддерживается",
-    "tag-local": "Локальный",
+    "tag-local": "ЛОКАЛЬНЫЙ",
     "tag-local-tooltip": "Этот режим установлен только у вас, его нет на вики",
-    "tag-hardcoded": "Встроенный",
+    "tag-hardcoded": "ВСТРОЕННЫЙ",
     "tag-hardcoded-tooltip": "Этот режим встроен в игру и не может быть изменён",
-    "tag-failed-import": "Ошибка импорта",
+    "tag-failed-import": "ОШИБКА ИМПОРТА",
     "tag-failed-import-tooltip": "Режим скачан, но его не удалось импортировать",
-    "tag-borked": "Нерабочий",
+    "tag-borked": "НЕРАБОЧИЙ",
     "tag-borked-tooltip": "Этот режим не работает",
-    "tag-playable": "Рабочий",
+    "tag-playable": "РАБОЧИЙ",
     "tag-playable-tooltip": "Этот режим работает",
-    "tag-prerelease": "Бета",
+    "tag-prerelease": "БЕТА",
     "tag-prerelease-tooltip": "Текущая версия находится в стадии активной разработки",
     "home-page": "Домашняя страница",
     "report-issue": "Сообщить о проблеме",
     "download-checking": "Проверка...",
     "unavailable-online": "Недоступно для прямого скачивания",
+    "installed-unavailable-online": "Установлен, не доступен онлайн",
     "download": "Скачать",
     "redownload": "Скачать заново",
     "downloading": "Загрузка...",
     "update": "Обновить",
     "remove": "Удалить",
-    "installed": "Установлен",
-    "installed-unavailable-online": "Установлен, не доступен онлайн",
     "cancel-download": "Отменить загрузку",
     "cancel-remove": "Отменить удаление",
+    "cancel-update": "Отменить обновление",
     "refresh": "Обновить",
     "to-be-removed": "Будет удалён при следующем входе в игру!",
     "to-be-installed": "Будет установлен при следующем входе в игру!",
     "to-be-updated": "Будет обновлён при следующем входе в игру!",
+    "installed": "Установлен",
     "outdated": "Устарел",
     "creator-verified": "Подтверждённый создатель режима",
-    "cancel-update": "Отменить обновление",
     // {0} = error code
     "load-error": "Не удалось загрузить rurusetto-addon: Пожалуйста, сообщите об этом в репозиторий rurusetto-addon, НЕ в репозиторий osu!lazer: Code {1}",
     "main-page": "Главная",
     "changelog-page": "Список изменений",
-    "unknown-version": "Версия неизвестна"
+    "unknown-version": "Версия неизвестна",
+    "settings-header": "Rurusetto Addon",
+    "settings-api-address": "Адрес API",
+    "untitled-ruleset": "Безымянный режим",
+    "error-header": "О нет!",
+    "error-footer": "Пожалуйста, убедитесь, что у вас есть подключение к интернету и адрес API в настройках не содержит ошибок",
+    "retry": "Обновить",
+    "listing-fetch-error": "Не удалось загрузить список режимов",
+    "page-fetch-error": "Не удалось загрузить страницу",
+    "subpages-fetch-error": "Не удалось загрузить подстраницы",
+    "error-message-generic": "Что-то пошло не так, и я не знаю, что именно!",
+    "notification-work-incomplete": "Кажется, rurusetto addon не смог завершить предыдущую рабочую сессию. Пожалуйста, убедитесь, что ваши действия не могли вызвать ошибок"
 }
