--- a/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
+++ b/osu.Game.Rulesets.RurusettoAddon/osu.Game.Rulesets.RurusettoAddon.csproj
@@ -5,6 +5,7 @@
     <OutputType>Library</OutputType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <RootNamespace>osu.Game.Rulesets.RurusettoAddon</RootNamespace>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\**" />
@@ -17,6 +18,6 @@
     <None Remove="Resources\Textures\oh_no.png" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="ppy.osu.Game" Version="2022.405.0" />
+    <PackageReference Include="ppy.osu.Game" Version="2022.409.0" />
   </ItemGroup>
 </Project>
