add the translation of recommended beatmaps

--- a/LocalizationGenerator/Source/ru.jsonc
+++ b/LocalizationGenerator/Source/ru.jsonc
@@ -58,5 +58,6 @@
     "page-fetch-error": "Не удалось загрузить страницу",
     "subpages-fetch-error": "Не удалось загрузить подстраницы",
     "error-message-generic": "Что-то пошло не так, и я не знаю, что именно!",
-    "notification-work-incomplete": "Кажется, rurusetto addon не смог завершить предыдущую рабочую сессию. Пожалуйста, убедитесь, что ваши действия не могли вызвать ошибок"
+    "notification-work-incomplete": "Кажется, rurusetto addon не смог завершить предыдущую рабочую сессию. Пожалуйста, убедитесь, что ваши действия не могли вызвать ошибок",
+    "recommended-beatmaps-page": "Рекомендуемые карты"
 }
