also update ru.jsonc

--- a/LocalizationGenerator/Source/ru.jsonc
+++ b/LocalizationGenerator/Source/ru.jsonc
@@ -31,12 +31,12 @@
     "download": "Скачать",
     "redownload": "Скачать заново",
     "downloading": "Загрузка...",
-    "update": "Обновить",
+    "update": "Скачать обновление",
     "remove": "Удалить",
     "cancel-download": "Отменить загрузку",
     "cancel-remove": "Отменить удаление",
     "cancel-update": "Отменить обновление",
-    "refresh": "Обновить",
+    "refresh": "Обновить статус",
     "to-be-removed": "Будет удалён при следующем входе в игру!",
     "to-be-installed": "Будет установлен при следующем входе в игру!",
     "to-be-updated": "Будет обновлён при следующем входе в игру!",
